Automate Compywrite year, fixed scrolling footer and overlaping

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,13 @@
 body {
     margin: 0;
     padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.foot {
+    margin-top: auto;
 }
 
 /* ------- Navagation Bar ------- */
@@ -124,13 +131,21 @@ body {
 
 /* ------- /Navagation Bar ------- */
 
+/* ------- Main Content ------- */
+main { /* Main Content Container */
+    margin-top: 3.5rem;
+    /* margin-bottom: 1rem; */
+}
+/* ------- /Main Content ------- */
+
+
 /* ------- Footer ------- */
 .footerMain { /* Footer container */
     background-color: var(--mainContainer);
     overflow: hidden;
+    /* position: absolute; */
     left: 0;
     bottom: 0;
-    /* position: absolute; */
     width: 100%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
